# Vulkan

./: .gitignore  Cargo.toml  README.md  compile.sh
.VSCodeCounter/2023-11-19_14-58-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-11-19_14-59-23/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
shaders/: shader.vert
src/: buffer.rs  constant.rs  device.rs  lib.rs  main.rs  pipeline.rs  platform.rs  structs.rs  swapchain.rs  types.rs  utility.rs
