[package]
name = "vulky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3+1.3.251", features = ["linked"] }
winit = "0.28.6"
anyhow = { version = "1.0.75" }
winapi = "0.3.9"
num = "0.2"
lazy_static = "1.4"
